--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,3 +1,4 @@
 ﻿{
-  "item.tutorialmod.pink_garnet": "Pink Garnet :0"
+  "item.tutorialmod.pink_garnet": "Pink Garnet :0",
+  "item.tutorialmod.raw_pink_garnet": "Raw Pink Garnet TwT"
 }
