--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,5 +1,6 @@
 ﻿{
   "item.tutorialmod.pink_garnet": "Pink Garnet :0",
   "item.tutorialmod.raw_pink_garnet": "Raw Pink Garnet TwT",
-  "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO"
+  "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO",
+  "block.tutorialmod.raw_pink_garnet_block": "Block of Raw Pink Garnet :3"
 }
