--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,6 +1,7 @@
 ﻿{
   "item.tutorialmod.pink_garnet": "Pink Garnet :0",
   "item.tutorialmod.raw_pink_garnet": "Raw Pink Garnet TwT",
+  "item.tutorialmod.chisel": "Chisel",
 
 
   "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO",
