magic block that transforms gunpowder into creeper eggs when thrown ontop. \n episode 7

--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -6,6 +6,7 @@
 
   "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO",
   "block.tutorialmod.raw_pink_garnet_block": "Block of Raw Pink Garnet :3",
+  "block.tutorialmod.magic_block": "A block of magic",
 
   "block.tutorialmod.pink_garnet_ore": "The pink garnet origins",
   "block.tutorialmod.pink_garnet_deepslate_ore": "Harder Pink Garnet",
