my own idea: bedrock drill

--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.tutorialmod.pink_garnet": "Pink Garnet :0",
   "item.tutorialmod.raw_pink_garnet": "Raw Pink Garnet TwT",
   "item.tutorialmod.chisel": "Chisel",
+  "item.tutorialmod.drill": "Bedrock Drill",
   "item.tutorialmod.cauliflower": "BLOEMKOOL!!!",
   "item.tutorialmod.fallen_star": "Fallen Star",
 
