--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -27,6 +27,8 @@
   "block.tutorialmod.pink_garnet_ore": "The pink garnet origins",
   "block.tutorialmod.pink_garnet_deepslate_ore": "Harder Pink Garnet",
 
+  "block.tutorialmod.pink_garnet_lamp": "A lamp made out of Pink Garnet",
+
 
   "itemgroup.tutorialmod.pink_garnet_items": "Avans Banana Items",
   "itemgroup.tutorialmod.pink_garnet_blocks": "Avans Banana Blocks",
