--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -6,6 +6,12 @@
   "item.tutorialmod.cauliflower": "BLOEMKOOL!!!",
   "item.tutorialmod.fallen_star": "Fallen Star",
 
+  "item.tutorialmod.pink_garnet_sword": "A Sword made out of Pink Garnet",
+  "item.tutorialmod.pink_garnet_pickaxe": "A Pickaxe made out of Pink Garnet",
+  "item.tutorialmod.pink_garnet_axe": "A Axe made out of Pink Garnet",
+  "item.tutorialmod.pink_garnet_shovel": "A Shovel made out of Pink Garnet",
+  "item.tutorialmod.pink_garnet_hoe": "A Hoe made out of Pink Garnet",
+
 
   "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO",
   "block.tutorialmod.raw_pink_garnet_block": "Block of Raw Pink Garnet :3",
@@ -28,7 +34,6 @@
   "block.tutorialmod.pink_garnet_deepslate_ore": "Harder Pink Garnet",
 
   "block.tutorialmod.pink_garnet_lamp": "A lamp made out of Pink Garnet",
-
 
   "itemgroup.tutorialmod.pink_garnet_items": "Avans Banana Items",
   "itemgroup.tutorialmod.pink_garnet_blocks": "Avans Banana Blocks",
