pink garnet hammer [ep 16]

--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -12,6 +12,8 @@
   "item.tutorialmod.pink_garnet_shovel": "A Shovel made out of Pink Garnet",
   "item.tutorialmod.pink_garnet_hoe": "A Hoe made out of Pink Garnet",
 
+  "item.tutorialmod.pink_garnet_hammer": "Pink Garnet Hammer",
+
 
   "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO",
   "block.tutorialmod.raw_pink_garnet_block": "Block of Raw Pink Garnet :3",
