--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -12,6 +12,11 @@
   "item.tutorialmod.pink_garnet_shovel": "A Shovel made out of Pink Garnet",
   "item.tutorialmod.pink_garnet_hoe": "A Hoe made out of Pink Garnet",
 
+  "item.tutorialmod.pink_garnet_helmet": "Pink Garnet Helmet",
+  "item.tutorialmod.pink_garnet_chestplate": "Pink Garnet Chestplate",
+  "item.tutorialmod.pink_garnet_leggings": "Pink Garnet Leggings",
+  "item.tutorialmod.pink_garnet_boots": "Pink Garnet Boots",
+
   "item.tutorialmod.pink_garnet_hammer": "Pink Garnet Hammer",
 
 
