horse armor [ep 19]

--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -17,6 +17,8 @@
   "item.tutorialmod.pink_garnet_leggings": "Pink Garnet Leggings",
   "item.tutorialmod.pink_garnet_boots": "Pink Garnet Boots",
 
+  "item.tutorialmod.pink_garnet_horse_armor": "Pink Garnet Horse armor",
+
   "item.tutorialmod.pink_garnet_hammer": "Pink Garnet Hammer",
 
 
