Custom Bow [ep 22]

--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -23,6 +23,8 @@
 
   "item.tutorialmod.kaupen_armor_trim_smithing_template": "Kaupen Armor Trim",
 
+  "item.tutorialmod.kaupen_bow": "Kaupen Bow",
+
 
   "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO",
   "block.tutorialmod.raw_pink_garnet_block": "Block of Raw Pink Garnet :3",
