Custom Music disc [ep 25]

--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -19,6 +19,11 @@
 
   "item.tutorialmod.pink_garnet_horse_armor": "Pink Garnet Horse armor",
 
+  "item.tutorialmod.bar_brawl_music_disc": "§bMusic Disc",
+  "item.tutorialmod.bar_brawl_music_disc.desc": "Bryan Tech - Bar Brawl",
+  "item.tutorialmod.kitsune_maison_music_disc": "§bMusic Disc",
+  "item.tutorialmod.kitsune_maison_music_disc.desc": "Porter Robinson - Kitsune Maison",
+
   "item.tutorialmod.pink_garnet_hammer": "Pink Garnet Hammer",
 
   "item.tutorialmod.kaupen_armor_trim_smithing_template": "Kaupen Armor Trim",
