--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -57,6 +57,7 @@
   "itemgroup.tutorialmod.pink_garnet_blocks": "Avans Banana Blocks",
 
   "effect.tutorialmod.slimey": "Slimey",
+  "effect.tutorialmod.spleef": "Spleef",
 
   "tooltip.tutorialmod.magic_block.tooltip": "Throw §2transformable§r items on me §4:3§r",
 
