Custom Paintings [ep 28]

--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -79,6 +79,13 @@
   "effect.tutorialmod.slimey": "Slimey",
   "effect.tutorialmod.spleef": "Spleef",
 
+  "painting.tutorialmod.world.title": "World",
+  "painting.tutorialmod.world.author": "NanoAttack",
+  "painting.tutorialmod.shrimp.title": "Shrimp",
+  "painting.tutorialmod.shrimp.author": "NanoAttack",
+  "painting.tutorialmod.saw_them.title": "Saw Them",
+  "painting.tutorialmod.saw_them.author": "NanoAttack",
+
   "tooltip.tutorialmod.magic_block.tooltip": "Throw §2transformable§r items on me §4:3§r",
 
   "tooltip.tutorialmod.chisel": "Press §e§l[Shift]§r to read more information.",
