--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -87,6 +87,7 @@
   "painting.tutorialmod.saw_them.author": "NanoAttack",
 
   "enchantment.tutorialmod.lightning_striker": "Lightning Striker",
+  "enchantment.tutorialmod.limbo": "Limbo",
 
   "tooltip.tutorialmod.magic_block.tooltip": "Throw §2transformable§r items on me §4:3§r",
 
