Custom Crop & Custom Bush [ep 30&31]

--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -51,6 +51,7 @@
   "item.tutorialmod.kaupen_armor_trim_smithing_template": "Kaupen Armor Trim",
 
   "item.tutorialmod.kaupen_bow": "Kaupen Bow",
+  "item.tutorialmod.honey_berries": "Honey Barry",
 
 
   "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO",
@@ -76,6 +77,7 @@
   "block.tutorialmod.pink_garnet_deepslate_ore": "Harder Pink Garnet",
 
   "block.tutorialmod.pink_garnet_lamp": "A lamp made out of Pink Garnet",
+  "block.tutorialmod.honey_berry_bush": "Honey Barry Bush",
 
   "itemgroup.tutorialmod.pink_garnet_items": "Avans Banana Items",
   "itemgroup.tutorialmod.pink_garnet_blocks": "Avans Banana Blocks",
