Ore gen [ep 34]

--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -74,6 +74,8 @@
   "block.tutorialmod.pink_garnet_trapdoor": "Pink Garnet Trapdoor",
 
   "block.tutorialmod.pink_garnet_ore": "The pink garnet origins",
+  "block.tutorialmod.pink_garnet_end_ore": "Pink garnet end ore",
+  "block.tutorialmod.pink_garnet_nether_ore": "Pink garnet nether ore",
   "block.tutorialmod.pink_garnet_deepslate_ore": "Harder Pink Garnet",
 
   "block.tutorialmod.pink_garnet_lamp": "A lamp made out of Pink Garnet",
