--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -78,6 +78,14 @@
   "block.tutorialmod.pink_garnet_nether_ore": "Pink garnet nether ore",
   "block.tutorialmod.pink_garnet_deepslate_ore": "Harder Pink Garnet",
 
+  "block.tutorialmod.driftwood_log": "Driftwood Log",
+  "block.tutorialmod.driftwood_wood": "Driftwood Wood",
+  "block.tutorialmod.stripped_driftwood_log": "Stripped Driftwood Log",
+  "block.tutorialmod.stripped_driftwood_wood": "Stripped Driftwood Wood",
+  "block.tutorialmod.driftwood_planks": "Driftwood Planks",
+  "block.tutorialmod.driftwood_leaves": "Driftwood Leaves",
+  "block.tutorialmod.driftwood_sapling": "Driftwood Sapling",
+
   "block.tutorialmod.pink_garnet_lamp": "A lamp made out of Pink Garnet",
   "block.tutorialmod.honey_berry_bush": "Honey Barry Bush",
 
