--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -52,6 +52,7 @@
 
   "item.tutorialmod.kaupen_bow": "Kaupen Bow",
   "item.tutorialmod.honey_berries": "Honey Barry",
+  "item.tutorialmod.mantis_spawn_egg": "Mantis egg",
 
 
   "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO",
@@ -126,5 +127,8 @@
   "sounds.tutorialmod.magic_block_step": "Moists Noices",
   "sounds.tutorialmod.magic_block_place": "Abra Kadabra",
   "sounds.tutorialmod.magic_block_hit": "Auch",
-  "sounds.tutorialmod.magic_block_fall": "hehe haw"
+  "sounds.tutorialmod.magic_block_fall": "hehe haw",
+
+
+  "entity.tutorialmod.mantis": "Mantis"
 }
