--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -73,6 +73,8 @@
   "block.tutorialmod.pink_garnet_fence_gate": "Pink Garnet Fence Gate",
   "block.tutorialmod.pink_garnet_wall": "Pink Garnet Wall",
 
+  "block.tutorialmod.chair": "Chair",
+
   "block.tutorialmod.pink_garnet_door": "Pink Garnet Door",
   "block.tutorialmod.pink_garnet_trapdoor": "Pink Garnet Trapdoor",
 
