Custom Item Model [ep 48]

--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -7,7 +7,8 @@
   "item.tutorialmod.fallen_star": "Fallen Star",
 
   "item.tutorialmod.tomahawk": "Tomahawk",
-  "item.tutorialmod.spectre_staff": "Staff",
+  "item.tutorialmod.spectre_staff": "Spectre Staff",
+  "item.tutorialmod.spectral_staff": "Spectral Staff",
 
   "item.tutorialmod.pink_garnet_sword": "A Sword made out of Pink Garnet",
   "item.tutorialmod.pink_garnet_pickaxe": "A Pickaxe made out of Pink Garnet",
