--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -9,6 +9,7 @@
   "item.tutorialmod.tomahawk": "Tomahawk",
   "item.tutorialmod.spectre_staff": "Spectre Staff",
   "item.tutorialmod.spectral_staff": "Spectral Staff",
+  "item.tutorialmod.comboner_staff": "Comboner Staff",
 
   "item.tutorialmod.pink_garnet_sword": "A Sword made out of Pink Garnet",
   "item.tutorialmod.pink_garnet_pickaxe": "A Pickaxe made out of Pink Garnet",
