Custom Villager [ep 50]

--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -59,6 +59,7 @@
   "item.tutorialmod.honey_berries": "Honey Barry",
   "item.tutorialmod.mantis_spawn_egg": "Mantis egg",
 
+  "entity.minecraft.villager.tutorialmod.kaupenger": "Kaupenger",
 
   "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO",
   "block.tutorialmod.raw_pink_garnet_block": "Block of Raw Pink Garnet :3",
