Basic block entity [ep 55]

--- a/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/avans-eet-banaantjes-template-1.21/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -65,6 +65,8 @@
   "block.tutorialmod.raw_pink_garnet_block": "Block of Raw Pink Garnet :3",
   "block.tutorialmod.magic_block": "A block of magic",
 
+  "block.tutorialmod.pedestal": "Pedestal",
+
   "block.tutorialmod.pink_garnet_stairs": "Pink Garnet Stairs",
   "block.tutorialmod.pink_garnet_slab": "Pink Garnet Slab",
 
